<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_detail_movie_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".views.detail_movieActivity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_detail_movie_backdrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_detail_movie_card_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.20" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_detail_movie_card_detail_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

            <ImageView
                android:id="@+id/imageview_detail_movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/backdrop_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/guideline_detail_movie_backdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:backgroundTint="@color/black" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_detail_movie_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/design_default_color_secondary"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toStartOf="@id/guideline_detail_movie_card_detail_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline_detail_movie_card_horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/textview_detail_movie_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:text="@string/movie_title"
                        android:textAlignment="textStart"
                        android:textColor="@color/design_default_color_primary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_detail_movie_popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/black"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_title">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="3dp"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_gravity="center"
                                android:layout_marginEnd="6dp"
                                android:contentDescription="@string/star_icon"
                                android:src="@drawable/ic_star_rate_black_24dp"
                                app:tint="@color/gold" />

                            <TextView
                                android:id="@+id/detail_movie_vote_average_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:text="@string/rating_sample"
                                android:textColor="@color/white"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_detail_movie_lang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/black"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp"
                        app:layout_constraintStart_toEndOf="@id/card_detail_movie_popularity"
                        app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_title">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="3dp"
                            tools:ignore="UseCompoundDrawables">

                            <TextView
                                android:id="@+id/detail_movie_lang_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:text="@string/en"
                                android:textColor="@color/white"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_detail_movie_adult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/black"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp"
                        app:layout_constraintStart_toEndOf="@id/card_detail_movie_lang"
                        app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_title">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="3dp"
                            tools:ignore="UseCompoundDrawables">

                            <TextView
                                android:id="@+id/detail_movie_adult_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:text="@string/_18"
                                android:textColor="@color/white"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textview_detail_movie_overview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/overview"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/card_detail_movie_main" />

            <TextView
                android:id="@+id/textview_detail_movie_overview_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/lorem_ipsum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_overview_title" />

            <TextView
                android:id="@+id/textview_detail_movie_genres_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/genres"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_overview_content" />

            <TextView
                android:id="@+id/textview_detail_movie_genres_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:singleLine="false"
                android:text="@string/genres_sample"
                app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_genres_title" />

            <TextView
                android:id="@+id/textview_detail_movie_date_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/date_released_title"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_genres_content" />

            <TextView
                android:id="@+id/textview_detail_movie_date_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:singleLine="false"
                android:text="@string/_2020_04_20"
                app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_date_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</ScrollView>