<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp">

    <ProgressBar
        android:id="@+id/progress_fragment"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movietv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</FrameLayout>